##Text encoding: utf-8

2009-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request goffice>=0.7.6 after new API breakage.
	* programs/calc/gchemcalc.cc: use nes GOData API.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2009-04-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/atom.cc: start replacing OpenBabel code.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/crystaldoc.cc: ditto.
	* libs/gcu/cylinder.cc: ditto.
	* libs/gcu/cylinder.h: ditto.
	* libs/gcu/glview.cc: ditto.
	* libs/gcu/matrix.cc: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/molecule.h: ditto.
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* libs/gcu/sphere.cc: ditto.
	* libs/gcu/sphere.h: ditto.
	* libs/gcu/vector.cc: ditto.
	* libs/gcu/vector.h: ditto.
	* programs/3d/application.cc: ditto.
	* programs/3d/document.cc: ditto.
	* programs/3d/main.cc: ditto.

2009-04-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires libspreadsheet >= 1.9.6 to build the gnumeric
	plugin.

2009-04-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: fix fragment specific tags issues.
	* libs/gccv/text-tag.h: add TextTag::NeedNewRun() method.
	* libs/gcp/fragment.cc: reimplement serialization.

2009-04-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: partially reimplement loading.
	* libs/gcp/text-object.cc: add missing initialization.

2009-04-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: require gtk+-2.0 >= 2.14 and add -DGSEAL_ENABLE.
	* libs/gccv/canvas.cc: make things compile with -DGSEAL_ENABLE.
	* libs/gcp/fragment.cc: export the custom tags.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/view.cc: make things compile with -DGSEAL_ENABLE.
	* libs/gcp/widgetdata.cc: ditto.