@@ -1,5 +1,12 @@
 ##Text encoding: utf-8
 
+2009-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gccv/text-tag.cc: add a new line tag.
+	* libs/gccv/text-tag.h: ditto.
+	* libs/gccv/text.cc: implement runs on one line.
+	* libs/gccv/text.h: ditto.
+	* libs/gcp/fragment.cc: fix saving.
+
 2009-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
 	* configure.ac: request goffice>=0.7.6 after new API breakage.
 	* programs/calc/gchemcalc.cc: use nes GOData API.
